# pyesoifier

./: .gitignore  README.md  main.py  numbers.py  pyproject.toml  setup.py  string_factory.py  test.py
examples/: code.py
functions/: __init__.py  _str.py  chr.py  getattr.py  map.py  print.py
src/pyesoify/: __init__.py  __main__.py  chr.py  esoterify.py  numbers.py  obfuscate.py  operators.py  string_factory.py
src/pyesoify/functions/: __init__.py  _str.py  getattr.py
website/backend/: main.py  requirements.txt
website/backend/temp_inp/: keep_dir.txt
website/frontend/: package-lock.json  package.json
website/frontend/src/: app.css  app.html
website/frontend/src/routes/: +page.svelte
