[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyesoify"
version = "0.2.1"
authors = [{ name = "Tathya Garg", email = "coding.tathya+gh@gmail.com" }]
description = "A simple python package to convert python code to an esoteric form"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tathyagarg/pyesoify"
Issues = "https://github.com/tathyagarg/pyesoify/issues"
